<resources>
    <string name="app_name">appFit</string>
    <string name="male">hombre</string>
    <string name="female">mujer</string>
    <string name="height">altura</string>
    <string name="weight">peso</string>
    <string name="age">edad</string>"
    <string name="calculate">calcular</string>
    <string name="reCalculated">Re-Calcular</string>
    <string name="result">Tu resultado</string>
    <string name="calculatedIMC">Calcular el IMC</string>

    <string name="error">Error</string>

    <string name="title_bajo_peso">bajo peso</string>
    <string name="description_bajo_peso">Estas por debajo de tu peso segun tu altura y tamaño</string>

    <string name="title_peso_normal">normal</string>
    <string name="description_peso_normal">Estas en lo optimo para tu peso segun tu altura y tamaño</string>

    <string name="title_sobrepeso">sobrepeso</string>
    <string name="description_sobrepeso">estas por encima de lo optimo para tu peso y altura</string>

    <string name="title_obesidad">obesidad</string>
    <string name="description_obesidad">Estas muy por encima de lo optimo para tu peso y altura</string>


    <!--   lOGIN    -->

    <string name="login">Login</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="register">Registrate</string>

    <!--   LOGICA DEL LOGIN   -->
    <string name="msgError">Usuario o contraseña incorrectos</string>

    <!--  REGISTRO  -->
    <string name="registro">Registrarse</string>
    <string name="registrate">Registrate</string>
    <string name="correo">Example@email.com</string>
    <string name="regname">Nombre</string>
    <string name="reg_apellido">Apellido</string>
    <string name="confirmar_contraseña">Confirmar Contraseña</string>
    <string name="title_activity_usuario">usuarioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="olvidar">Recuperar Clave</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="regPhone">Tel.12345678910</string>

    <!-- olvido su contraseña -->
    <string name="nombOlvCont">Recupera tu clave</string>

</resources>